# journalctl-stream

./: build  changelog.md  journalctl-stream.cabal  readme.md  systemd-journald-stream.cabal
.github/workflows/: build.yml
lib/Systemd/Journalctl/: Stream.hs
lib/Systemd/Journald/: Stream.hs
