name: journalctl-stream
description: Stream logs using journalctl.
version: 0.1.0.0
author: Daniel Casanueva (daniel.casanueva `at` proton.me)
maintainer: Daniel Casanueva (daniel.casanueva `at` proton.me)
license: MIT
license-file: license
build-type: Simple
category: System
cabal-version: >= 1.10

library
  hs-source-dirs: lib
  default-extensions: ImportQualifiedPost, OverloadedStrings
  ghc-options: -Wall
  build-depends: base, aeson, conduit, process, unix, text, time
  exposed-modules: Systemd.Journalctl.Stream
